undo stream changes